--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Vision Quest</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/white.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,8 +24,97 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					Vision Quest
+				</section>
+
+				<section>
+					<section>
+						we are overhauling the way we disseminate data
+					</section>
+					<section>
+						all public data will flow through CEDSCI
+					</section>
+					<section>
+						and you shouldn't have be an census expert to use census data accurately and efficiently
+					</section>
+				</section>
+				<section>
+					<section>
+					<p>
+						we have 3 main targets
+					</p>
+					<hr>
+					<ul>
+						<li>census.gov</li>
+						<li>data dissemination tools</li>
+						<li>data services</li>
+					</ul>
+					</section>
+					<section>
+						we want data to be everywhere on census.gov
+					</section>
+					<section>
+						we want to maintain less code
+					</section>
+					<section>
+						we want developers to use our stuff
+					</section>
+				</section>
+				<section>
+					<section>
+						so what does this look like?
+					</section>
+					<section>
+						<img src="img/census-search-orig.png" alt="">
+					</section>
+					<section>
+						<img src="img/pi14-censusGov.png" alt="">
+					</section>
+					<section>
+						<img src="img/ed-attain-orig.png" alt="">
+					</section>
+					<section>
+						<img src="img/ed-attain-all.png" alt="">
+					</section>
+					<section>
+						<img src="img/censusGov-int.png" alt="">
+					</section>
+				</section>
+				<section>
+					<section>
+						we need to consolidate our app experiences
+					</section>
+					<section>
+						<img src="img/pelosi-orig.png" alt="">
+					</section>
+					<section>
+						<img src="img/pelosi-full.png" alt="">
+					</section>
+					<section>
+						<img src="img/google-orig.png" alt="">
+					</section>
+					<section>
+						<img src="img/google-future.png" alt="">
+					</section>
+				</section>
+				<section>
+					<section>
+						help devs use our data
+					</section>
+					<section>
+						<img src="img/dev-landing.jpg" width="30%" alt="">
+					</section>
+					<section>
+						<img src="img/docs-detail.jpg" width="90%" alt="">
+					</section>
+					<section>
+						<img src="img/sandbox-detail.jpg" width="50%" alt="">
+					</section>
+				</section>
+				<section>
+					<img src="img/arch.png" width="40%" alt="">
+				</section>
 			</div>
 		</div>
 
