--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<img src="img/pi14-censusGov.png" alt="">
 					</section>
 					<section>
-						<img src="img/ed-attain-orig.png" alt="">
+						<img src="img/Ed-attain-orig.png" alt="">
 					</section>
 					<section>
 						<img src="img/ed-attain-all.png" alt="">
