--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
 						all public data will flow through CEDSCI
 					</section>
 					<section>
-						and you shouldn't have be an census expert to use census data accurately and efficiently
+						our data providers will have an easier time releasing their data
+					</section>
+					<section>
+						and our users shouldn't have be an census expert to use census data accurately and efficiently
+					</section>
+					<section>
+						<img src="img/arch.png" width="40%" alt="">
 					</section>
 				</section>
 				<section>
@@ -111,9 +117,6 @@
 					<section>
 						<img src="img/sandbox-detail.jpg" width="50%" alt="">
 					</section>
-				</section>
-				<section>
-					<img src="img/arch.png" width="40%" alt="">
 				</section>
 			</div>
 		</div>
