--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               >
             </h3>
             <p style="color:white;font-size:.6em;opacity:.6">
-              Zach Whitman, CDO
+              Zach Whitman
             </p>
           </section>
           <section>
